# PX4_ROS_interface

./: CMakeLists.txt  README.md  package.xml
include/: game_formation_controller.h  game_uav.h
launch/: game_formation.launch
parameters/: exp_formation.yaml
script/: follow_move.py  goalkeeper_drone.py  test_vel_yawrate_cmd_interface.py
script/test/: test_vel_yaw_cmd_api.py
script/tool_for_simlation/: return_in_simulation.py  set_offboard.py  take_off_in_simulation.py  test_takeoff_in_simulation.py
src/: game_formation_controller.cpp  game_formation_controller_node.cpp  game_uav.cpp
